--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -21,9 +21,12 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      working-directory: ./hands-on-developer-main/nodejs-app
 
     - name: Lint code
       run: npm run lint
+      working-directory: ./hands-on-developer-main/nodejs-app
 
     - name: Run tests
       run: npm run tests
+      working-directory: ./hands-on-developer-main/nodejs-app
