--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -19,6 +19,10 @@ jobs:
       with:
         node-version: '16' # Specify the Node.js version
 
+    - name: Debug - List directory
+      run: ls -la
+      working-directory: ./hands-on-developer-main/
+    
     - name: Install dependencies
       run: npm install
       working-directory: ./hands-on-developer-main/nodejs-project
