--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -14,26 +14,25 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Debug - List root directory
+      run: ls -la
+
+    - name: Debug - List developer_codebase directory
+      run: ls -la developer_codebase
+
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '16' # Specify the Node.js version
+        node-version: '16'
 
-    - name: Debug - List directory
-      run: ls -la
-      working-directory: ./hands-on-developer-main/
-    
     - name: Install dependencies
       run: npm install
-      working-directory: ./hands-on-developer-main/nodejs-project
-
-
+      working-directory: ./developer_codebase/hands-on-developer-main/nodejs-project
 
     - name: Lint code
       run: npm run lint
-      working-directory: ./hands-on-developer-main/nodejs-project
-
+      working-directory: ./developer_codebase/hands-on-developer-main/nodejs-project
 
     - name: Run tests
-      run: npm run tests
-      working-directory: ./hands-on-developer-main/nodejs-project
+      run: npm run test
+      working-directory: ./developer_codebase/hands-on-developer-main/nodejs-project
